tests/bad_programs/parse_errors/statement_outside_function.nc
if (true) {
    int x = 45;
}

int main() {
    return 0;
}
